# meeting_notes

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  sample_transcript.txt
app/: __init__.py  config.py  main.py
app/middlewares/: __init__.py  error.py  request.py  slack_auth.py  zoom_auth.py
app/models/: __init__.py  oauth.py  types.py
app/repositories/: __init__.py  idempotency.py  jira_ticket.py  oauth.py  storage.py  user_mapping.py
app/routes/: __init__.py  admin.py  health.py  oauth.py  slack.py  zoom.py
app/services/: __init__.py  jira.py  llm.py  meeting.py  oauth.py  outlook.py  queue.py  slack.py  slack_bot.py  zoom.py
app/utils/: __init__.py  encryption.py  logger.py  retry.py
docs/: presentation.html  presentation.md
